<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chartview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearlayout_homeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeFragment" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- Start Heart Rate card -->

            <LinearLayout
                android:id="@+id/target_hr_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/targertHeartRatesTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:gravity="left"
                        android:text="@string/target_hr"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/googleNowGray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginRight="5dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/about_fragment_image_description"
                            android:fitsSystemWindows="false"
                            android:src="@drawable/target" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/BPM1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="left"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/googleNowGray" />

                            <TextView
                                android:id="@+id/BPM2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="left"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/googleNowGray" />

                            <TextView
                                android:id="@+id/BPM3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="left"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/googleNowGray" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/targerHRCardDropshadow"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_below="@id/target_hr_card"
                android:background="@drawable/dropshadow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- End Heart Rate card -->


            <!-- Start METs card -->

            <LinearLayout
                android:id="@+id/graph_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/metsLoggedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:gravity="left"
                    android:text="@string/mets_logged"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/googleNowGray" />

                <com.fima.chartview.ChartView
                    android:id="@+id/chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="150dip"
                    chartview:bottomLabelHeight="20dp"
                    chartview:gridLineColor="#E5E5E5"
                    chartview:gridLineWidth="1dp"
                    chartview:gridLinesHorizontal="0"
                    chartview:gridLinesVertical="5"
                    chartview:leftLabelWidth="56dp" />
            </LinearLayout>

            <View
                android:id="@+id/graphCardDropshadow"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_below="@id/graph_card"
                android:background="@drawable/dropshadow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- End METs card -->


            <!-- Start Calories card -->

            <LinearLayout
                android:id="@+id/graph_card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/metsLoggedTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:gravity="left"
                    android:text="@string/cals_logged"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/googleNowGray" />

                <com.fima.chartview.ChartView
                    android:id="@+id/chart_view2"
                    android:layout_width="match_parent"
                    android:layout_height="150dip"
                    chartview:bottomLabelHeight="20dp"
                    chartview:gridLineColor="#E5E5E5"
                    chartview:gridLineWidth="1dp"
                    chartview:gridLinesHorizontal="0"
                    chartview:gridLinesVertical="5"
                    chartview:leftLabelWidth="56dp" />
            </LinearLayout>

            <View
                android:id="@+id/graphCardDropshadow2"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_below="@id/graph_card"
                android:background="@drawable/dropshadow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <!-- End Calories card -->

            <!-- Start Random Facts Card -->

            <LinearLayout
                android:id="@+id/random_facts_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/randomFactsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:gravity="left"
                    android:text="@string/random_facts_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/googleNowGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/randomFact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="left"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/googleNowGray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/factsCardDropshadow"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="@drawable/dropshadow" />
            <!-- End Random Facts Card -->

        </LinearLayout>
    </LinearLayout>

</ScrollView>